@@ -4,7 +4,7 @@
 # ^^^^^^^^^^
 # by Aldo Calpini <dada@perl.it>
 #
-# Version: 0.54 (04 Mar 2008)
+# Version: 0.55 (23 Mar 2008)
 #
 # Current maintainer:
 # Cosimo Streppone <cosimo@cpan.org>
